--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -54,12 +54,8 @@
 }
 
 .blurBg {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 900;
   backdrop-filter: blur(5px);
 }
 
